--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+
+body{
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .status-bar{
     display: flex;
     justify-content: space-between;
@@ -5,5 +11,4 @@
 
 .status-bar__column:first-child span{
     margin-right: 5px;
-
 }
