--- a/css/challenge10styles.css
+++ b/css/challenge10styles.css
@@ -28,7 +28,6 @@ body{
     padding-left:10px;
     width:180px;
     height:50px;
-    background-color: tomato;
     display: flex;
     justify-content: space-between;
 }
@@ -38,7 +37,6 @@ body{
     margin-top:30px;
     width:280px;
     height:100px;
-    background-color: wheat;
     display: flex;
     align-items: center;
 }
@@ -79,7 +77,6 @@ body{
     margin-top:30px;
     width:280px;
     height:80px;
-    background-color: gray;
     display: flex;
     justify-content: space-evenly;
 }
@@ -102,7 +99,6 @@ body{
 .btn__play{
     width:100px;
     height:60px;
-    background-color: white;
 }
 
 .play{
@@ -117,13 +113,11 @@ body{
     margin-top:30px;
     width:280px;
     height:320px;
-    background-color: hotpink;
 }
 
 .playlist__align{
     width: 270px;
     height: 75px;
-    background-color: teal;
     display: flex;
     justify-content:space-evenly;
     align-items: center;
@@ -166,5 +160,4 @@ body{
 }
 
 .blue{
-    background-color: navy;
-}
+    background-color: navy;}
